# ai_python_dev_reference

./: About-Quantization.md  Git-Setup.md  Linux-WSL-Setup.md  MacOS-Setup.md  README.md  Suggested-Tools-and-Setup.md  Suggested-Tools.md  Windows-Setup.md
ai_examples_cuda_12/: pyproject.toml
ai_examples_cuda_12/ai_examples/fx/backend_config/: ai_edge_backend.py  openvino_backend.py
ai_examples_cuda_12/ai_examples/fx/utils/: backend_config_fix.py  post_process.py  pre_process.py
docs/: Web-Development-and-AI-API.md  Web-Development.md
docs/ai_development/: About-Quantization.md  CUDA-python-dockerfiles.md  CUDA-python-poetry-dockerfiles.md  Makefile-notes.md  Poetry-C++-extensions-guide.md  Python-Suggested-Packages.md
docs/setup_guides/: Git-Setup-and-Customization.md  Linux-WSL-Setup.md  MacOS-Setup.md  Python-Setup.md  Suggested-Tools-and-Setup.md  Web-Development-Setup.md  Windows-Setup.md
env_build/dockerfiles/: poetry_python_-_3-11_bookworm.dockerfile  poetry_python_-_3-11_cuda11-8.dockerfile  poetry_python_-_3-11_cuda11-8_cv-builds.dockerfile  poetry_python_-_3-11_cuda12-1.dockerfile  poetry_python_-_3-11_cuda12-1_cv-builds.dockerfile  poetry_python_-_3-11_cuda12-9.dockerfile  poetry_python_-_3-11_cuda12-9_cv-builds.dockerfile  poetry_python_-_3-11_cuda13-0.dockerfile  poetry_python_-_3-11_cuda13-0_cv-builds.dockerfile  poetry_python_-_3-12_bookworm.dockerfile  poetry_python_-_3-12_cuda11-8.dockerfile  poetry_python_-_3-12_cuda11-8_cv-builds.dockerfile  poetry_python_-_3-12_cuda12-9.dockerfile  poetry_python_-_3-12_cuda12-9_cv-builds.dockerfile  (+2 more)
